<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b1701"
    android:layout_gravity="center_horizontal"
    tools:context=".decisionScreen">


    <TextView
        android:id="@+id/parameters_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_pick_parameters"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="40sp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/parameters_title"
        android:text="@string/open_now"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:switchPadding="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:onClick="openSwitchClicked"

        />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#2b1701"
        android:onClick="startSearch"
        android:text="@string/search_button"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/radiusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch1"
        android:text="@string/radius_text"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radiusGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiusText"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radio05km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_below="@id/radiusText"
            android:text="@string/text_05km"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:checked="true"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/radio1km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_below="@id/radiusText"
            android:text="@string/text_1km"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/radio2km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_below="@id/radiusText"
            android:text="@string/text_2km"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/keyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiusGroup"
        android:text="@string/key_text"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyText"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/exampleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:text="@string/example"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15sp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:layout_centerHorizontal="true" />




</RelativeLayout>